--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tensorflow/tfjs": "^3.18.0",
     "bootstrap": "^5.3.5",
+    "chart.js": "^4.4.9",
     "face-api.js": "^0.22.2",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
@@ -31,6 +32,7 @@
     "jquery": "^3.7.1",
     "jspdf": "^3.0.1",
     "ng-recaptcha": "^12.0.2",
+    "ng2-charts": "^8.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.17.2",
